--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -5,59 +6,78 @@
   <title>Terms of Service | Thekedaar</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <div class="logo">
       <img src="assets/logo.png" alt="Thekedaar Logo" />
     </div>
+
     <nav>
-  <a href="index.html">Home</a>
-  <a href="privacy-policy.html">Privacy Policy</a>
-  <a href="disclaimer.html">Disclaimer</a>
-  <a href="terms-of-service.html">Terms of Service</a>
-</nav>
+      <a href="index.html">Home</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="disclaimer.html">Disclaimer</a>
+      <a href="terms-of-service.html">Terms of Service</a>
+    </nav>
   </header>
 
   <main class="legal-page">
-    <h1>Terms of Service</h1>
+    <h1 class="legal-title">Terms of Service</h1>
     <p class="effective">Effective Date: December 14, 2025</p>
 
     <h2>1. Agreement to Terms</h2>
-    <p>These Terms of Service (“Terms”) constitute a legally binding agreement made between you ("the User") and the owners and operators of thekedaar.co.in ("we," "us," or "our"), concerning your access to and use of the Services...</p>
+    <p>
+      These Terms of Service (“Terms”) constitute a legally binding agreement between you (“the User”) and the owners and operators of thekedaar.co.in (“we,” “us,” or “our”), governing your access to and use of our website and related services (“Services”).
+    </p>
 
     <h2>2. Description of the Services</h2>
-    <p>The services provided consist of an independent media platform and informational archive...</p>
+    <p>
+      The Services provided consist of an independent media platform and informational archive. We offer curated content, score updates, and general information for entertainment and reference purposes only.
+    </p>
 
     <h2>3. Privacy Policy</h2>
-    <p>We respect your privacy. We do not collect or process personal data...</p>
+    <p>
+      We respect your privacy. We do not collect, store, or process personal data unless explicitly stated in our Privacy Policy. By using the Services, you acknowledge that you have reviewed and agree to our Privacy Policy.
+    </p>
 
     <h2>4. User Eligibility and Responsibility</h2>
-    <p>The Services are intended for users who are of the legal age of majority...</p>
+    <p>
+      The Services are intended for users who are of the legal age of majority in their jurisdiction. You agree to use the Services responsibly and not engage in any activity that may harm, disrupt, or misuse the platform.
+    </p>
 
     <h2>5. Governing Law and Jurisdiction</h2>
-    <p>These Terms will be governed by the laws of India...</p>
+    <p>
+      These Terms shall be governed by and interpreted in accordance with the laws of India. Any disputes arising from these Terms shall be subject to the exclusive jurisdiction of the courts located in New Delhi, India.
+    </p>
 
     <h2>6. Intellectual Property Rights</h2>
-    <p>The Services and their original content are the exclusive property of us and our licensors...</p>
+    <p>
+      All content, branding, design elements, and materials available on the Services are the exclusive property of us and our licensors. Unauthorized reproduction, distribution, or modification is strictly prohibited.
+    </p>
 
     <h2>7. Prohibited Conduct</h2>
-    <p>You agree not to misuse the Services...</p>
+    <p>
+      You agree not to misuse the Services, including but not limited to attempting unauthorized access, interfering with functionality, or using the platform for unlawful purposes.
+    </p>
 
     <h2>8. Disclaimers; Limitation of Liability</h2>
-    <p>THE SERVICES ARE PROVIDED "AS-IS" AND "AS-AVAILABLE"...</p>
+    <p>
+      THE SERVICES ARE PROVIDED “AS-IS” AND “AS-AVAILABLE” WITHOUT WARRANTIES OF ANY KIND. WE DISCLAIM ALL LIABILITY FOR ANY DIRECT, INDIRECT, INCIDENTAL, OR CONSEQUENTIAL DAMAGES ARISING FROM YOUR USE OF THE SERVICES.
+    </p>
 
     <h2>9. General Terms</h2>
     <ul>
-      <li>Entire Agreement</li>
-      <li>Severability</li>
-      <li>Revisions</li>
+      <li><strong>Entire Agreement:</strong> These Terms constitute the full agreement between you and us.</li>
+      <li><strong>Severability:</strong> If any provision is found unenforceable, the remaining provisions will remain in effect.</li>
+      <li><strong>Revisions:</strong> We may update these Terms at any time. Continued use of the Services indicates acceptance of the updated Terms.</li>
     </ul>
   </main>
 
   <footer>
-    <p>© 2025 Thekedaar.co.in | 
-      <a href="terms-of-service.html">Terms</a> | 
-      <a href="privacy-policy.html">Privacy</a> | 
+    <p>
+      © 2025 Thekedaar.co.in |
+      <a href="terms-of-service.html">Terms</a> |
+      <a href="privacy-policy.html">Privacy</a> |
       <a href="disclaimer.html">Disclaimer</a>
     </p>
   </footer>
