--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -6,42 +6,62 @@
   <title>Privacy Policy | Thekedaar</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
-  <div class="logo">
-    <img src="assets/logo.png" alt="Thekedaar Logo">
-  </div>
-  <nav>
-  <a href="index.html">Home</a>
-  <a href="privacy-policy.html">Privacy Policy</a>
-  <a href="disclaimer.html">Disclaimer</a>
-  <a href="terms-of-service.html">Terms of Service</a>
-</nav>
-</header>
+    <div class="logo">
+      <img src="assets/logo.png" alt="Thekedaar Logo" />
+    </div>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="disclaimer.html">Disclaimer</a>
+      <a href="terms-of-service.html">Terms of Service</a>
+    </nav>
+  </header>
 
   <main class="legal-page">
-    <h1>Privacy Policy</h1>
+    <h1 class="legal-title">Privacy Policy</h1>
+    <p class="effective">Effective Date: December 14, 2025</p>
 
     <h2>1. No Personal Data Collection</h2>
-    <p>Thekedaar.co.in does not collect, store, or process any personal information...</p>
+    <p>
+      Thekedaar.co.in does not collect, store, or process any personal information. 
+      We do not request user accounts, login details, contact information, or any form of identifiable data.
+    </p>
 
     <h2>2. Non-Transactional Service</h2>
-    <p>Our Services are provided solely for informational and archival purposes...</p>
+    <p>
+      Our Services are provided solely for informational and archival purposes. 
+      We do not offer paid services, subscriptions, or transactions that require personal data.
+    </p>
 
     <h2>3. Future Changes</h2>
-    <p>If in the future we introduce features that require personal data, we will update this Privacy Policy...</p>
+    <p>
+      If in the future we introduce features that require personal data, we will update this Privacy Policy 
+      and clearly inform users before collecting any information.
+    </p>
 
     <h2>4. External Links</h2>
-    <p>Our Services may contain links to external websites. We are not responsible for their privacy practices...</p>
+    <p>
+      Our Services may contain links to external websites. 
+      We are not responsible for the privacy practices, content, or policies of third‑party websites. 
+      Users are encouraged to review the privacy policies of any external sites they visit.
+    </p>
 
     <h2>5. Governing Law</h2>
-    <p>This Privacy Policy shall be governed by the laws of India...</p>
+    <p>
+      This Privacy Policy shall be governed by and interpreted in accordance with the laws of India. 
+      Any disputes arising from this Policy shall fall under the jurisdiction of the courts in New Delhi, India.
+    </p>
   </main>
 
   <footer>
-    <p>© 2025 Thekedaar.co.in | 
-      <a href="terms-of-service.html">Terms</a> | 
-      <a href="privacy-policy.html">Privacy</a> | 
+    <p>
+      © 2025 Thekedaar.co.in |
+      <a href="terms-of-service.html">Terms</a> |
+      <a href="privacy-policy.html">Privacy</a> |
       <a href="disclaimer.html">Disclaimer</a>
     </p>
   </footer>
