--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,43 +6,60 @@
   <title>Disclaimer | Thekedaar</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <div class="logo">
       <img src="assets/logo.png" alt="Thekedaar Logo" />
     </div>
+
     <nav>
-  <a href="index.html">Home</a>
-  <a href="privacy-policy.html">Privacy Policy</a>
-  <a href="disclaimer.html">Disclaimer</a>
-  <a href="terms-of-service.html">Terms of Service</a>
-</nav>
+      <a href="index.html">Home</a>
+      <a href="privacy-policy.html">Privacy Policy</a>
+      <a href="disclaimer.html">Disclaimer</a>
+      <a href="terms-of-service.html">Terms of Service</a>
+    </nav>
   </header>
 
   <main class="legal-page">
-    <h1>Disclaimer</h1>
+    <h1 class="legal-title">Disclaimer</h1>
     <p class="effective">Effective Date: December 14, 2025</p>
 
     <h2>1. Informational Purpose Only</h2>
-    <p>The information provided on thekedaar.co.in is for general informational and archival purposes only...</p>
+    <p>
+      The information provided on thekedaar.co.in is for general informational and archival purposes only. 
+      While we strive to ensure accuracy, we make no guarantees regarding the completeness, reliability, or timeliness of the content.
+    </p>
 
     <h2>2. No Advice</h2>
-    <p>The content on this website does not constitute professional, financial, legal, or other advice...</p>
+    <p>
+      The content on this website does not constitute professional, financial, legal, or any other form of advice. 
+      Users should not rely solely on the information provided and are encouraged to seek professional guidance where necessary.
+    </p>
 
     <h2>3. Limitation of Liability</h2>
-    <p>In no event shall thekedaar.co.in, its owners, or affiliates be liable for any loss or damage...</p>
+    <p>
+      In no event shall thekedaar.co.in, its owners, contributors, or affiliates be held liable for any direct, indirect, incidental, or consequential damages arising from the use of this website or reliance on its content.
+    </p>
 
     <h2>4. External Links</h2>
-    <p>This website may contain links to external websites. We are not responsible for their content...</p>
+    <p>
+      This website may contain links to external websites. 
+      We do not endorse, control, or take responsibility for the content, policies, or practices of any third‑party websites.
+    </p>
 
     <h2>5. Changes to Disclaimer</h2>
-    <p>We reserve the right to update or amend this Disclaimer at any time...</p>
+    <p>
+      We reserve the right to update, modify, or amend this Disclaimer at any time without prior notice. 
+      Continued use of the website constitutes acceptance of the updated terms.
+    </p>
   </main>
 
   <footer>
-    <p>© 2025 Thekedaar.co.in | 
-      <a href="terms-of-service.html">Terms</a> | 
-      <a href="privacy-policy.html">Privacy</a> | 
+    <p>
+      © 2025 Thekedaar.co.in |
+      <a href="terms-of-service.html">Terms</a> |
+      <a href="privacy-policy.html">Privacy</a> |
       <a href="disclaimer.html">Disclaimer</a>
     </p>
   </footer>
