--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- GOOGLE SHEETS API -->
   <script>
-    const apiKey = "YOUR_KEY_HERE";
+    const apiKey = "AIzaSyA6MZr97k_P2vLEd3izI3F7UZLJMCvE6WA";
     const sheetId = "1UIFwICEddQE5XtMz_Wod3Gp0H6TQwTvE2TCeXw77-sQ";
     const tabName = "results";
 
